[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chlorophyll"
version = "0.4.2"
description = "A module that fills your code with color - syntax highlighted text box widget for Tkinter."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT license"}
authors = [
    {name = "rdbende", email = "rdbende@gmail.com"}
]
dependencies = [
    "pygments",
    "toml",
    "tklinenums",
    "pyperclip",
    "pytest"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rdbende/chlorophyll"

[tool.black]
line-length = 110

[tool.isort]
line_length = 100
profile = "black"
multi_line_output = 3 

[dependency-groups]
dev = [
    "pytest-cov>=4.1.0",
]
